// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unknown plugin nested: nested 1`] = `

import { wc, css, html, slot } from '../../macro'

const A = wc(
  css\`
    display: flex;

    .left {
      flex: 100px 0 0;

      font-size: \${size}
    }

    & > .right {
      flex: auto 1 0;
    }
  \`,
  html\`
    <div>\${slot()}</div>
  \`
);

      ↓ ↓ ↓ ↓ ↓ ↓

const A = wc(
  \`:host{display:flex;}.left{flex:100px 0 0;font-size:\${size};}:host>.right{flex:auto 1 0;}\`,
  {
    html: \`<div><slot></slot></div>\`,
  }
);


`;

exports[`unknown plugin placeholders: placeholders 1`] = `

import { wc, css, html, slot } from '../../macro'

const A = wc(
  css\`
    display: flex;

    margin: calc(1em + \${"3px"});
    color: \${color};
  \`,
  html\`
    <div>\${slot()}</div>
  \`
);

      ↓ ↓ ↓ ↓ ↓ ↓

const A = wc(
  \`:host{display:flex;margin:calc(1em + \${"3px"});color:\${color};}\`,
  {
    html: \`<div><slot></slot></div>\`,
  }
);


`;
